syntax = "proto3";
package virtengine.roles.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/roles/v1";

// Role represents the different roles in the VirtEngine system
enum Role {
  option (gogoproto.goproto_enum_prefix) = false;

  // ROLE_UNSPECIFIED is the default/invalid role
  ROLE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "RoleUnspecified"];

  // ROLE_GENESIS_ACCOUNT represents the highest privilege role - initial chain authority
  ROLE_GENESIS_ACCOUNT = 1 [(gogoproto.enumvalue_customname) = "RoleGenesisAccount"];

  // ROLE_ADMINISTRATOR represents platform operations with high trust level
  ROLE_ADMINISTRATOR = 2 [(gogoproto.enumvalue_customname) = "RoleAdministrator"];

  // ROLE_MODERATOR represents content/user moderation with medium-high trust level
  ROLE_MODERATOR = 3 [(gogoproto.enumvalue_customname) = "RoleModerator"];

  // ROLE_VALIDATOR represents consensus participants with high trust level
  ROLE_VALIDATOR = 4 [(gogoproto.enumvalue_customname) = "RoleValidator"];

  // ROLE_SERVICE_PROVIDER represents infrastructure operators with medium trust level
  ROLE_SERVICE_PROVIDER = 5 [(gogoproto.enumvalue_customname) = "RoleServiceProvider"];

  // ROLE_CUSTOMER represents end users with standard trust level
  ROLE_CUSTOMER = 6 [(gogoproto.enumvalue_customname) = "RoleCustomer"];

  // ROLE_SUPPORT_AGENT represents customer support with medium trust level
  ROLE_SUPPORT_AGENT = 7 [(gogoproto.enumvalue_customname) = "RoleSupportAgent"];
}

// AccountState represents the state of an account
enum AccountState {
  option (gogoproto.goproto_enum_prefix) = false;

  // ACCOUNT_STATE_UNSPECIFIED is the default/invalid state
  ACCOUNT_STATE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "AccountStateUnspecified"];

  // ACCOUNT_STATE_ACTIVE represents an active account
  ACCOUNT_STATE_ACTIVE = 1 [(gogoproto.enumvalue_customname) = "AccountStateActive"];

  // ACCOUNT_STATE_SUSPENDED represents a temporarily suspended account
  ACCOUNT_STATE_SUSPENDED = 2 [(gogoproto.enumvalue_customname) = "AccountStateSuspended"];

  // ACCOUNT_STATE_TERMINATED represents a permanently terminated account
  ACCOUNT_STATE_TERMINATED = 3 [(gogoproto.enumvalue_customname) = "AccountStateTerminated"];
}

// RoleAssignment represents a role assigned to an account
message RoleAssignment {
  option (gogoproto.equal) = true;

  // Address is the account address that has the role
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // Role is the assigned role
  Role role = 2 [
    (gogoproto.jsontag) = "role",
    (gogoproto.moretags) = "yaml:\"role\""
  ];

  // AssignedBy is the address that assigned this role
  string assigned_by = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "assigned_by",
    (gogoproto.moretags) = "yaml:\"assigned_by\""
  ];

  // AssignedAt is the Unix timestamp when the role was assigned
  int64 assigned_at = 4 [
    (gogoproto.jsontag) = "assigned_at",
    (gogoproto.moretags) = "yaml:\"assigned_at\""
  ];
}

// AccountStateRecord represents the stored state of an account
message AccountStateRecord {
  option (gogoproto.equal) = true;

  // Address is the account address
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // State is the current account state
  AccountState state = 2 [
    (gogoproto.jsontag) = "state",
    (gogoproto.moretags) = "yaml:\"state\""
  ];

  // Reason is the reason for the current state
  string reason = 3 [
    (gogoproto.jsontag) = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];

  // ModifiedBy is the address that last modified the state
  string modified_by = 4 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "modified_by",
    (gogoproto.moretags) = "yaml:\"modified_by\""
  ];

  // ModifiedAt is the Unix timestamp when the state was last modified
  int64 modified_at = 5 [
    (gogoproto.jsontag) = "modified_at",
    (gogoproto.moretags) = "yaml:\"modified_at\""
  ];

  // PreviousState is the previous account state
  AccountState previous_state = 6 [
    (gogoproto.jsontag) = "previous_state",
    (gogoproto.moretags) = "yaml:\"previous_state\""
  ];
}

// Params defines the parameters for the roles module
message Params {
  option (gogoproto.equal) = true;
  option (amino.name) = "virtengine/roles/Params";

  // MaxRolesPerAccount is the maximum number of roles an account can have
  uint32 max_roles_per_account = 1 [
    (gogoproto.jsontag) = "max_roles_per_account",
    (gogoproto.moretags) = "yaml:\"max_roles_per_account\""
  ];

  // AllowSelfRevoke determines if accounts can revoke their own roles
  bool allow_self_revoke = 2 [
    (gogoproto.jsontag) = "allow_self_revoke",
    (gogoproto.moretags) = "yaml:\"allow_self_revoke\""
  ];
}

// EventRoleAssigned is emitted when a role is assigned to an account
message EventRoleAssigned {
  option (gogoproto.equal) = true;

  // Address is the account that received the role
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // Role is the assigned role
  string role = 2 [
    (gogoproto.jsontag) = "role",
    (gogoproto.moretags) = "yaml:\"role\""
  ];

  // AssignedBy is the address that assigned the role
  string assigned_by = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "assigned_by",
    (gogoproto.moretags) = "yaml:\"assigned_by\""
  ];
}

// EventRoleRevoked is emitted when a role is revoked from an account
message EventRoleRevoked {
  option (gogoproto.equal) = true;

  // Address is the account that lost the role
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // Role is the revoked role
  string role = 2 [
    (gogoproto.jsontag) = "role",
    (gogoproto.moretags) = "yaml:\"role\""
  ];

  // RevokedBy is the address that revoked the role
  string revoked_by = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "revoked_by",
    (gogoproto.moretags) = "yaml:\"revoked_by\""
  ];
}

// EventAccountStateChanged is emitted when an account state changes
message EventAccountStateChanged {
  option (gogoproto.equal) = true;

  // Address is the account whose state changed
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // PreviousState is the previous state
  string previous_state = 2 [
    (gogoproto.jsontag) = "previous_state",
    (gogoproto.moretags) = "yaml:\"previous_state\""
  ];

  // NewState is the new state
  string new_state = 3 [
    (gogoproto.jsontag) = "new_state",
    (gogoproto.moretags) = "yaml:\"new_state\""
  ];

  // ModifiedBy is the address that modified the state
  string modified_by = 4 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "modified_by",
    (gogoproto.moretags) = "yaml:\"modified_by\""
  ];

  // Reason is the reason for the state change
  string reason = 5 [
    (gogoproto.jsontag) = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];
}

// EventAdminNominated is emitted when a new administrator is nominated
message EventAdminNominated {
  option (gogoproto.equal) = true;

  // Address is the nominated administrator
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // NominatedBy is the address that made the nomination
  string nominated_by = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "nominated_by",
    (gogoproto.moretags) = "yaml:\"nominated_by\""
  ];
}
